--- a/Styles/index.css
+++ b/Styles/index.css
@@ -88,7 +88,7 @@ form {
 }
 
 button {
-  background-color: #2279b3;
+  background-color: #2275ab;
   color: #fff;
   cursor: pointer;
   transition: background-color 0.3s;
